# LLVMSlicer

./: .gitignore  CMakeLists.txt  README  TODO
src/: AnalysisProps.h  CMakeLists.txt  Kleerer.cpp  Languages.h  ModStats.cpp  Slicer.cpp
src/Callgraph/: Callgraph.cpp  Callgraph.h  LangLLVM.h
src/Languages/: LLVM.cpp  LLVM.h  LLVMSupport.h
src/Modifies/: AlgoDumbSpeedy.h  LangLLVM.h  Modifies.cpp  Modifies.h  PredefContainers.cpp  PredefContainers.h
src/PointsTo/: AlgoAndersen.cpp  AlgoAndersen.h  Fixpoint.h  LangLLVM.cpp  LangLLVM.h  PointsTo.cpp  PointsTo.h  PredefContainers.cpp  PredefContainers.h  RuleExpressions.cpp  RuleExpressions.h
src/Slicing/: FunctionStaticSlicer.cpp  FunctionStaticSlicer.h  PostDominanceFrontier.cpp  PostDominanceFrontier.h  Prepare.cpp  Prepare.h  Prepare2.cpp  StaticSlicer.cpp  StaticSlicer.h
test/: CMakeLists.txt  a.c  dump-points-to.cpp  field-sensitive-test.cpp  field-sensitive.c  linked.c
